# Iris-playgound

./: LICENSE  LICENSE-COQ  LICENSE-TEX  README.md
.github/workflows/: coq-build.yml  latexmk.yml
coq/: .gitignore  Makefile.coq.local  README.md  _CoqProject  coq-iris-exercises.opam
coq/sep_logic/: .counter.aux  .lists.aux  counter.v  lists.v  stack.v
tex/: Makefile  README.md  chpt3.tex  chpt4.1.tex  chpt4.2.tex  chpt4.tex  heaplang.sty  iris-exercises.tex  iris.sty  locallabel.sty  pftools.sty  setup.tex
